# Qr-Code-Generation

./: .env.example  .env.localhost  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.rust  Dockerfile.simple  Makefile  README.md  app.py  deploy_script.sh  docker-compose.rust.yml  docker-compose.yml  docker_setup.txt  go.mod  landing_page.html  qr_api_backend.go  redis.conf  requirements.txt  run.sh
nginx/: nginx.conf
src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs  qr_service.rs  redis_client.rs
